fetch txns API fixed